--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,9 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
-.description {
   font-size: 23px;
-}
 
+}
 
 .return {
   text-align: right;
@@ -50,7 +48,7 @@ h2 {
   outline: 1px solid;
 }
 
-.link {
+.container .link {
   text-align: center;
   font-size: 21px;
 }
